renamed whole project, rewrote spell fetching in favor of rest client, removed caching

--- a/src/main/resources/templates/characterSheet.html
+++ b/src/main/resources/templates/characterSheet.html
@@ -9,7 +9,7 @@
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
 
-    <title>I Require Order</title>
+    <title>Party Sheet Show</title>
 
 </head>
 <body>
