--- a/src/main/resources/templates/templates.html
+++ b/src/main/resources/templates/templates.html
@@ -17,22 +17,26 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
                 <li class="nav-item">
-                    <a href="/home.html" th:href="@{/home}" class="nav-link link-body-emphasis px-2" th:classappend="${home}" aria-current="page">
+                    <a href="/home.html" th:href="@{/home}" class="nav-link link-body-emphasis px-2"
+                       th:classappend="${home}" aria-current="page">
                         Home
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/characters.html" th:href="@{/characters}" class="nav-link link-body-emphasis px-2" th:classappend="${characters}">
+                    <a href="/characters.html" th:href="@{/characters}" class="nav-link link-body-emphasis px-2"
+                       th:classappend="${characters}">
                         Characters
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/initiativeTracker.html" th:href="@{/initiativeTracker}" class="nav-link link-body-emphasis px-2" th:classappend="${tracker}">
+                    <a href="/initiativeTracker.html" th:href="@{/initiativeTracker}"
+                       class="nav-link link-body-emphasis px-2" th:classappend="${tracker}">
                         Initiative Tracker
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/levelsTable.html" th:href="@{/levelsTable}" class="nav-link link-body-emphasis px-2" th:classappend="${levels}">
+                    <a href="/levelsTable.html" th:href="@{/levelsTable}" class="nav-link link-body-emphasis px-2"
+                       th:classappend="${levels}">
                         Levels cheat sheet
                     </a>
                 </li>
