--- a/src/main/resources/templates/characters.html
+++ b/src/main/resources/templates/characters.html
@@ -47,18 +47,18 @@
         <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
             <div class="container-fluid">
                 <div class="collapse navbar-collapse" id="navbar2">
-                    <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                    <div class="nav-item  me-auto mb-2 mb-md-0">
+                        <a href="javascript:history.back()" class="btn btn-success me-2">
+                            Back
+                        </a>
+                    </div>
+                    <ul class="navbar-nav">
                         <li class="nav-item">
                             <a href="/characterAdd.html" th:href="@{/characterAdd}" class="btn btn-success me-2">
                                 Add character
                             </a>
                         </li>
                     </ul>
-                    <div class="nav-item">
-                        <a href="javascript:history.back()" class="btn btn-success me-2">
-                            Back
-                        </a>
-                    </div>
                 </div>
             </div>
         </nav>
