--- a/src/main/resources/templates/levelsTable.html
+++ b/src/main/resources/templates/levelsTable.html
@@ -32,13 +32,13 @@
     <nav class="navbar navbar-expand-md navbar-dark bg-dark border border-4 border-dark">
         <div class="container-fluid">
             <div class="collapse navbar-collapse" id="navbar2">
-                <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                </ul>
-                <div class="nav-item">
+                <div class="nav-item me-auto mb-2 mb-md-0">
                     <a href="javascript:history.back()" class="btn btn-success me-2">
                         Back
                     </a>
                 </div>
+                <ul class="navbar-nav">
+                </ul>
             </div>
         </div>
     </nav>
