--- a/src/main/resources/templates/characterAdd.html
+++ b/src/main/resources/templates/characterAdd.html
@@ -6,12 +6,12 @@
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="css/styles.css">
     <title>Party Sheet Show</title>
 
 </head>
 <body>
-<div th:replace="~{templates :: navbar('','active','','')}"></div>
+<div th:replace="~{templates :: navbar('','','active','','')}"></div>
 <main class="container">
     <div style="text-align: center"><h1>Add Character</h1></div>
     <form id="addCharacterForm" class="row form-control bg-dark text-light mt-2 border border-4 border-dark" action="#"
