--- a/src/main/resources/templates/characterSheet.html
+++ b/src/main/resources/templates/characterSheet.html
@@ -7,13 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-
-
+    <link rel="stylesheet" href="css/styles.css">
     <title>Party Sheet Show</title>
 
 </head>
 <body>
-<div th:replace="~{templates :: navbar('','active','','')}"></div>
+<div th:replace="~{templates :: navbar('','','active','','')}"></div>
 <main class="container">
     <nav class="navbar navbar-expand-md navbar-dark bg-dark border border-4 border-dark rounded mt-2">
         <div class="container-fluid">
@@ -259,18 +258,18 @@
                             </div>
                             <div class="col-2">
                                 <div class="row">
-                                    <div class="col-12">Max HP</div>
+                                    <div class="col-12">Temp HP</div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-12" th:text="*{maxHealth}">maxHp</div>
+                                    <div class="col-12" th:text="*{tempHealth}">tempHp</div>
                                 </div>
                             </div>
                             <div class="col-2">
                                 <div class="row">
-                                    <div class="col-12">Temp HP TODO</div>
+                                    <div class="col-12">Max HP</div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-12">tempHp</div>
+                                    <div class="col-12" th:text="*{maxHealth}">maxHp</div>
                                 </div>
                             </div>
                         </div>
