--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,15 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="css/styles.css">
 
     <title>Party Sheet Show</title>
 
 </head>
 <body>
-<div th:replace="~{templates :: navbar('active','','','')}"></div>
-<main>
-    <div class="center-me-div-pls">
+<div th:replace="~{templates :: navbar('active','','','','')}"></div>
+<main class="container">
+    <div>
         <img src="/images/the_party.png" width="100%" height="100%">
     </div>
 </main>
