--- a/src/main/resources/templates/imNotWorkingBro.html
+++ b/src/main/resources/templates/imNotWorkingBro.html
@@ -7,12 +7,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="/js/imNotWorkingBro.js" defer></script>
+    <link rel="stylesheet" href="css/styles.css">
 
     <title>Sorry</title>
 
 </head>
 <body>
-<div th:replace="~{templates :: navbar('','','','')}"></div>
+<div th:replace="~{templates :: navbar('','','','','')}"></div>
 <main class="container bg-body-tertiary p-5 rounded">
     <div style="margin: auto; margin-top: 2%; width: 50%; text-align: center"><h1>Im not working bro</h1></div>
     <div style="margin: auto; text-align: center;">
