--- a/src/main/resources/templates/initiativeTracker.html
+++ b/src/main/resources/templates/initiativeTracker.html
@@ -6,13 +6,14 @@
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
 
     <title>Party Sheet Show</title>
 
 </head>
 <body>
-<div th:replace="~{templates :: navbar('','','active','')}"></div>
-<div style="text-align: center"><h1>Initiative tracker</h1></div>
+<div th:replace="~{templates :: navbar('','','','active','')}"></div>
+<div style="text-align: center" class="text-light"><h1>Initiative tracker</h1></div>
 <main class="d-flex flex-nowrap">
     <div class="container d-flex flex-column flex-shrink-0 p-3">
         <form action="#" th:action="@{/initiativeTracker}" th:object="${initiativeTracker}" method="post">
@@ -85,7 +86,7 @@
             </nav>
             <div>
                 <div>
-                    <p class="text-wrap" style="font-weight: bold;">
+                    <p class="text-wrap text-light" style="font-weight: bold;">
                         If you save the initiative the ID will be shown below. Keep it to be able to
                         reload the tracker later.</p>
                     <p style="font-weight: bold;" th:if="${initiativeId}" th:text="${initiativeId}"></p>
