--- a/src/main/resources/templates/levelsTable.html
+++ b/src/main/resources/templates/levelsTable.html
@@ -6,13 +6,14 @@
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
 
     <title>Party Sheet Show</title>
 </head>
 <body>
-<div th:replace="~{templates :: navbar('','','','active')}"></div>
+<div th:replace="~{templates :: navbar('','','','','active')}"></div>
 <main class="container">
-    <div style="margin: auto; margin-top: 2%; width: 50%; text-align: center"><h1>Levels table</h1></div>
+    <div style="margin: auto; margin-top: 2%; width: 50%; text-align: center" class="text-light"><h1>Levels table</h1></div>
     <table class="table table-hover table-striped table-dark" style="margin-bottom: auto;">
         <tr>
             <th>Level</th>
