--- a/src/main/resources/templates/templates.html
+++ b/src/main/resources/templates/templates.html
@@ -39,7 +39,7 @@
                         Initiative Tracker
                     </a>
                 </li>
-                <li class="nav-item" sec:authorize="isAuthenticated()">
+                <li class="nav-item">
                     <a href="/levelsTable.html" th:href="@{/levelsTable}" class="nav-link link-body-emphasis px-2"
                        th:classappend="${levels}">
                         Levels cheat sheet
