--- a/src/main/resources/templates/initiativeTracker.html
+++ b/src/main/resources/templates/initiativeTracker.html
@@ -89,7 +89,7 @@
                     <p class="text-wrap text-light" style="font-weight: bold;">
                         If you save the initiative the ID will be shown below. Keep it to be able to
                         reload the tracker later.</p>
-                    <p style="font-weight: bold;" th:if="${initiativeId}" th:text="${initiativeId}"></p>
+                    <p class="text-light" style="font-weight: bold;" th:if="${initiativeId}" th:text="${initiativeId}"></p>
                 </div>
             </div>
         </form>
