--- a/src/main/resources/templates/characters.html
+++ b/src/main/resources/templates/characters.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" th:href="@{/css/style.css}" type="text/css">
     <title>Party Sheet Show</title>
 
 </head>
@@ -29,10 +29,16 @@
             </tr>
             <tr th:each="character : ${characters}">
                 <td>
-                    <form th:action="@{characters}" method="post">
-                        <input type="hidden" name="id" th:value="${character.id}">
-                        <input type="submit" name="characterSheet" value="Character sheet" class="btn btn-success">
-                        <input type="submit" name="delete" value="Delete" class="btn btn-danger">
+                    <a th:href="@{/characters/{id}(id=${character.id})}"
+                       class="btn btn-success">
+                        Character sheet
+                    </a>
+                    <form th:action="@{/characters/{id}/delete(id=${character.id})}"
+                          method="post"
+                          class="d-inline">
+                        <button type="submit" class="btn btn-danger">
+                            Delete
+                        </button>
                     </form>
                 </td>
                 <td th:text="${character.name}"></td>
