--- a/src/main/resources/templates/characterAdd.html
+++ b/src/main/resources/templates/characterAdd.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en"
       xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="https://www.thymeleaf.org">
+      xmlns:th="https://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -46,29 +47,9 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-2">
-                    <label for="strength">Strength:</label><input id="strength" class="form-control" type="text"
-                                                                  th:field="*{strength}">
-                </div>
-                <div class="col-2">
-                    <label for="dexterity">Dexterity:</label><input id="dexterity" class="form-control" type="text"
-                                                                    th:field="*{dexterity}">
-                </div>
-                <div class="col-2">
-                    <label for="constitution">Constitution:</label><input id="constitution" class="form-control"
-                                                                          type="text" th:field="*{constitution}">
-                </div>
-                <div class="col-2">
-                    <label for="intelligence">Intelligence:</label><input id="intelligence" class="form-control"
-                                                                          type="text" th:field="*{intelligence}">
-                </div>
-                <div class="col-2">
-                    <label for="wisdom">Wisdom:</label><input id="wisdom" class="form-control" type="text"
-                                                              th:field="*{wisdom}">
-                </div>
-                <div class="col-2">
-                    <label for="charisma">Charisma:</label><input id="charisma" class="form-control" type="text"
-                                                                  th:field="*{charisma}">
+                <div class="col-2" th:each="attrName: ${attributeNames}">
+                    <label th:for="${attrName.name}" th:text="${attrName.name}"></label>
+                    <input th:id="${attrName.name}" class="form-control" type="text" th:field="*{attributes[__${attrName}__]}">
                 </div>
             </div>
         </div>
@@ -86,10 +67,26 @@
                 <div class="col-2 mb-2 mt-4 d-inline-flex">
                     <div class="d-inline-flex justify-content-center align-items-center">
                         <div class="badge text-bg-success rounded-pill me-1 d-inline-flex" th:if="*{race}">
-                            <div class="d-inline-flex align-items-center" th:text="*{race.name}"></div>
+                            <div class="d-inline-flex align-items-center" th:text="*{race.name}">race.name</div>
                             <button type="submit" class="btn btn-danger badge rounded-pill ms-1" th:formaction="@{/characterAdd?deleteRace}">X</button>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-12" th:if="*{race}">
+            <div class="row">
+                <div class="col-12">
+                    <div class="d-inline-flex justify-content-center align-items-center">
+                        <div class="badge text-bg-success rounded-pill me-1 d-inline-flex">
+                            <div class="d-inline-flex align-items-center" th:text="*{race.name}">race.name</div>
+                            <button type="submit" class="btn btn-danger badge rounded-pill ms-1" th:formaction="@{/characterAdd?deleteRace}">X</button>
+                        </div>
+                    </div>
+                    <ul th:each="trait : ${selectedRaceTraits}">
+                        <li th:text="${trait.name}" class="border-bottom">trait.name</li>
+                        <li th:text="${trait.description}">trait.desc</li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -105,14 +102,27 @@
                     </select>
                 </div>
                 <ul class="col-2 mb-2 mt-4 list-unstyled d-inline-flex">
-                    <li class="d-inline-flex justify-content-center align-items-center" th:each="c: *{characterClasses}">
-                        <div class="badge text-bg-success rounded-pill me-1 d-inline-flex" th:if="${c}">
-                            <div class="d-inline-flex align-items-center" th:text="${c.name}"></div>
-                            <button type="submit" class="btn btn-danger badge rounded-pill ms-1" name="classKey" th:formaction="@{/characterAdd?deleteClass}" th:value="${c.key}">X</button>
+                    <li class="d-inline-flex justify-content-center align-items-center" th:each="classEntry: *{classes}">
+                        <div class="badge text-bg-success rounded-pill me-1 d-inline-flex" th:if="${classEntry}">
+                            <div class="d-inline-flex align-items-center" th:text="${classEntry.value.name}">class.name</div>
+                            <button type="submit" class="btn btn-danger badge rounded-pill ms-1" name="classKey" th:formaction="@{/characterAdd?deleteClass}" th:value="${classEntry.key}">X</button>
                         </div>
-
                     </li>
                 </ul>
+            </div>
+        </div>
+        <div class="col-12">
+            <div class="row">
+                <div class="col-12" th:each="classFeature : ${selectedClassesFeatures}">
+                    <div class="badge text-bg-success rounded-pill me-1 d-inline-flex">
+                        <div class="d-inline-flex align-items-center" th:text="${classFeature.name}">class.name</div>
+                        <button type="submit" class="btn btn-danger badge rounded-pill ms-1" name="classKey" th:formaction="@{/characterAdd?deleteClass}" th:value="${classFeature.srdKey}">X</button>
+                    </div>
+                    <ul th:each="feature : ${classFeature.features}">
+                        <li th:text="${feature.name}" class="border-bottom">feature.name</li>
+                        <li th:text="${feature.description}">feature.desc</li>
+                    </ul>
+                </div>
             </div>
         </div>
 
