--- a/src/main/resources/templates/characterSheet.html
+++ b/src/main/resources/templates/characterSheet.html
@@ -66,7 +66,8 @@
                     </div>
                 </div>
                 <div class="col-2">
-                    <button class="btn btn-outline-success btn-toggle d-inline-flex align-items-center rounded border-0"
+                    <button type="button"
+                            class="btn btn-outline-success btn-toggle d-inline-flex align-items-center rounded border-0"
                             data-bs-toggle="collapse" data-bs-target="#level-collapse" aria-expanded="true">
                         Level
                     </button>
@@ -88,7 +89,7 @@
                         <div class="col-6 mt-1 mb-2" th:text="${character.name}">
                             Name
                         </div>
-                        <div class="col-6 mt-1 mb-2">
+                        <div class="col-6 mt-1 mb-2" th:text="${character.playerName}">
                             Player
                         </div>
                     </div>
@@ -184,30 +185,31 @@
                         <div class="col-6">
                             <div class="row">
                                 <div class="col-12">
-                                    <button class="btn  btn-outline-success btn-toggle d-inline-flex align-items-center rounded border-0"
-                                            data-bs-toggle="collapse" data-bs-target="#attributes-collapse"
+                                    <button type="button"
+                                            class="btn  btn-outline-success btn-toggle d-inline-flex align-items-center rounded border-0"
+                                            data-bs-toggle="collapse" data-bs-target="#abilities-collapse"
                                             aria-expanded="true">
-                                        Attributes
+                                        Abilities
                                     </button>
                                 </div>
                             </div>
                             <div class="row border border-2 rounded">
-                                <div class="col-12  collapse show" id="attributes-collapse">
-                                    <div class="row" th:if="${character.attributes}"
-                                         th:each="attributeName : ${attributeNames}">
-                                        <div class="col-6" th:text="${attributeName.getSrdKey()}">name</div>
+                                <div class="col-12  collapse show" id="abilities-collapse">
+                                    <div class="row" th:if="${character.abilities}"
+                                         th:each="abilityName : ${abilityNames}">
+                                        <div class="col-6" th:text="${abilityName.getSrdKey()}">name</div>
                                         <div class="col-3"
                                              style="padding-left: 0px !important; padding-right: 0px !important">
                                             <div th:if="${mode == 'view'}"
-                                                 th:text="${character.getAttribute(attributeName.getSrdKey()).getValue()}">
+                                                 th:text="${character.getAbility(abilityName.getSrdKey()).getValue()}">
                                                 val
                                             </div>
                                             <input th:if="${mode == 'edit'}"
                                                    class="form-control text-center"
-                                                   th:field="*{attributes[__${attributeName}__]}">
+                                                   th:field="*{abilities[__${abilityName}__]}">
                                         </div>
                                         <div class="col-3"
-                                             th:text="${character.getAttribute(attributeName.getSrdKey()).getBonus()}">
+                                             th:text="${character.getAbility(abilityName.getSrdKey()).getBonus()}">
                                             bonus
                                         </div>
                                     </div>
@@ -215,7 +217,8 @@
                             </div>
                             <div class="row">
                                 <div class="col-12">
-                                    <button class="btn  btn-outline-success btn-toggle d-inline-flex align-items-center rounded border-0"
+                                    <button type="button"
+                                            class="btn  btn-outline-success btn-toggle d-inline-flex align-items-center rounded border-0"
                                             data-bs-toggle="collapse" data-bs-target="#saving-throws-collapse"
                                             aria-expanded="true">
                                         Saving throws
@@ -270,7 +273,8 @@
                         <div class="col-6">
                             <div class="row">
                                 <div class="col-12">
-                                    <button class="btn  btn-outline-success btn-toggle d-inline-flex align-items-center rounded border-0"
+                                    <button type="button"
+                                            class="btn  btn-outline-success btn-toggle d-inline-flex align-items-center rounded border-0"
                                             data-bs-toggle="collapse" data-bs-target="#skills-collapse"
                                             aria-expanded="true">
                                         Skills
@@ -307,7 +311,8 @@
                             </div>
                             <div class="row">
                                 <div class="col-12">
-                                    <button class="btn btn-outline-success btn-toggle d-inline-flex align-items-center rounded border-0"
+                                    <button type="button"
+                                            class="btn btn-outline-success btn-toggle d-inline-flex align-items-center rounded border-0"
                                             data-bs-toggle="collapse" data-bs-target="#proficiencies-collapse"
                                             aria-expanded="true">
                                         Proficiencies
@@ -346,7 +351,8 @@
                     </div>
                     <div class="row">
                         <div class="col-12">
-                            <button class="btn btn-outline-success btn-toggle d-inline-flex align-items-center rounded border-0"
+                            <button type="button"
+                                    class="btn btn-outline-success btn-toggle d-inline-flex align-items-center rounded border-0"
                                     data-bs-toggle="collapse" data-bs-target="#inventory-list-collapse"
                                     aria-expanded="true">
                                 Inventory
@@ -381,7 +387,8 @@
                 <div class="col-6 text-center">
                     <div class="row">
                         <div class="col-12">
-                            <button class="btn  btn-outline-success btn-toggle d-inline-flex align-items-center rounded border-0"
+                            <button type="button"
+                                    class="btn btn-outline-success btn-toggle d-inline-flex align-items-center rounded border-0"
                                     data-bs-toggle="collapse" data-bs-target="#basic-stats-collapse"
                                     aria-expanded="true">
                                 Basic Stats
@@ -450,12 +457,18 @@
                                 </div>
                             </div>
                             <div class="row">
+                                <div>Hit Dices</div>
+                                <div th:each="diceEntry : ${character.health.hitDices.entrySet()}" th:if="${diceEntry.value > 0}">
+                                        <div class="col" th:text="${diceEntry.value}"></div>
+                                        <div class="col" th:text="${diceEntry.key.name}"></div>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-12">
-                            <button class="btn  btn-outline-success btn-toggle d-inline-flex align-items-center rounded border-0"
+                            <button type="button"
+                                    class="btn btn-outline-success btn-toggle d-inline-flex align-items-center rounded border-0"
                                     data-bs-toggle="collapse" data-bs-target="#actions-list-collapse"
                                     aria-expanded="true">
                                 Actions
@@ -467,7 +480,8 @@
                             <div class="row">
                                 <div class="border-bottom">
                                     <div class="text-start row">
-                                        <button class="btn btn-outline-success btn-toggle d-inline-flex align-items-center rounded border-0"
+                                        <button type="button"
+                                                class="btn btn-outline-success btn-toggle d-inline-flex align-items-center rounded border-0"
                                                 data-bs-toggle="collapse" data-bs-target="#actions-collapse"
                                                 aria-expanded="true">
                                             Actions
@@ -486,7 +500,8 @@
                                 </div>
                                 <div class="border-bottom">
                                     <div class="text-start row">
-                                        <button class="btn  btn-outline-success btn-toggle d-inline-flex align-items-center rounded border-0"
+                                        <button type="button"
+                                                class="btn btn-outline-success btn-toggle d-inline-flex align-items-center rounded border-0"
                                                 data-bs-toggle="collapse" data-bs-target="#bonus-actions-collapse"
                                                 aria-expanded="true">
                                             Bonus Actions
@@ -505,7 +520,8 @@
                                 </div>
                                 <div class="border-bottom">
                                     <div class="text-start row">
-                                        <button class="btn  btn-outline-success btn-toggle d-inline-flex align-items-center rounded border-0"
+                                        <button type="button"
+                                                class="btn btn-outline-success btn-toggle d-inline-flex align-items-center rounded border-0"
                                                 data-bs-toggle="collapse" data-bs-target="#reaction-collapse"
                                                 aria-expanded="true">
                                             Reactions
@@ -527,7 +543,8 @@
                     </div>
                     <div class="row">
                         <div class="col-12">
-                            <button class="btn  btn-outline-success btn-toggle d-inline-flex align-items-center rounded border-0"
+                            <button type="button"
+                                    class="btn btn-outline-success btn-toggle d-inline-flex align-items-center rounded border-0"
                                     data-bs-toggle="collapse" data-bs-target="#spells-list-collapse"
                                     aria-expanded="true">
                                 Spells
@@ -539,7 +556,8 @@
                             <div class="row">
                                 <div class="border-bottom">
                                     <div class="text-start row">
-                                        <button class="btn  btn-outline-success btn-toggle d-inline-flex align-items-center rounded border-0"
+                                        <button type="button"
+                                                class="btn btn-outline-success btn-toggle d-inline-flex align-items-center rounded border-0"
                                                 data-bs-toggle="collapse" data-bs-target="#cantrips-collapse"
                                                 aria-expanded="true">
                                             Cantrips
@@ -556,7 +574,8 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <button class="btn  btn-outline-success btn-toggle d-inline-flex align-items-center rounded border-0"
+                                <button type="button"
+                                        class="btn btn-outline-success btn-toggle d-inline-flex align-items-center rounded border-0"
                                         data-bs-toggle="collapse" data-bs-target="#spells-1-collapse"
                                         aria-expanded="true">
                                     Level 1
@@ -574,7 +593,8 @@
                                         </li>
                                     </ul>
                                 </div>
-                                <button class="btn  btn-outline-success btn-toggle d-inline-flex align-items-center rounded border-0"
+                                <button type="button"
+                                        class="btn btn-outline-success btn-toggle d-inline-flex align-items-center rounded border-0"
                                         data-bs-toggle="collapse" data-bs-target="#spells-2-collapse"
                                         aria-expanded="true">
                                     Level 2
