- Separating Open5e model from player character model continues, - Some fixes and changes to characterSheet - Added race ability selections to characterAdd. - Included fixed ability bonuses in mapper. - Bumped java to 25

--- a/src/main/resources/templates/characters.html
+++ b/src/main/resources/templates/characters.html
@@ -46,8 +46,8 @@
                 <td th:text="${character.armorClass}"></td>
                 <td th:text="${character.health.max}"></td>
                 <div th:each="abilityName : ${abilityNames}">
-                    <td th:if="${character.abilities}"
-                        th:text="${character.getAbility(abilityName.getSrdKey()).getValue()}"></td>
+                    <td th:unless="${#lists.isEmpty(character.abilities)}"
+                        th:text="${character.getAbility(abilityName.getSrdKey()).getTotalValue()}"></td>
                 </div>
             </tr>
         </table>
