--- a/src/main/resources/templates/characterAdd.html
+++ b/src/main/resources/templates/characterAdd.html
@@ -2,7 +2,7 @@
 <html lang="en"
       xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="https://www.thymeleaf.org"
-      xmlns:sec="https://www.thymeleaf.org/extras/spring-security">
+>
 <head>
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -49,7 +49,8 @@
             <div class="row">
                 <div class="col-2" th:each="attrName: ${abilityNames}">
                     <label th:for="${attrName.name}" th:text="${attrName.name}"></label>
-                    <input th:id="${attrName.name}" class="form-control" type="text" th:field="*{abilities[__${attrName}__]}">
+                    <input th:id="${attrName.name}" class="form-control" type="text"
+                           th:field="*{abilities[__${attrName}__]}">
                 </div>
             </div>
         </div>
@@ -57,7 +58,8 @@
             <div class="row">
                 <div class="col-2 mb-2">
                     <label for="race">Race:</label>
-                    <select id="race" class="form-control" th:field="*{chosenRaceKey}" onchange="this.form.action='/characterAdd?addRace'; this.form.submit();">
+                    <select id="race" class="form-control" th:field="*{chosenRaceKey}"
+                            onchange="this.form.action='/characterAdd?addRace'; this.form.submit();">
                         <option value="" th:text="'Select a race'"></option>
                         <option th:each="race : ${races}"
                                 th:value="${race.srdKey}"
@@ -68,7 +70,9 @@
                     <div class="d-inline-flex justify-content-center align-items-center">
                         <div class="badge text-bg-success rounded-pill me-1 d-inline-flex" th:if="*{race}">
                             <div class="d-inline-flex align-items-center" th:text="*{race.name}">race.name</div>
-                            <button type="submit" class="btn btn-danger badge rounded-pill ms-1" th:formaction="@{/characterAdd?deleteRace}">X</button>
+                            <button type="submit" class="btn btn-danger badge rounded-pill ms-1"
+                                    th:formaction="@{/characterAdd?deleteRace}">X
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -76,14 +80,28 @@
         </div>
         <div class="col-12" th:if="*{race}">
             <div class="row">
-                <div class="col-12">
-                    <div class="d-inline-flex justify-content-center align-items-center">
-                        <div class="badge text-bg-success rounded-pill me-1 d-inline-flex">
-                            <div class="d-inline-flex align-items-center" th:text="*{race.name}">race.name</div>
-                            <button type="submit" class="btn btn-danger badge rounded-pill ms-1" th:formaction="@{/characterAdd?deleteRace}">X</button>
-                        </div>
+                <div class="col-12 mb-2">
+                    <div>Select Race abilities:</div>
+                    <div th:each="choice : *{race.abilityBonuses.choices}">
+                        <ul class="row list-unstyled">
+                            <li class="col-2" th:each="i : ${#numbers.sequence(0, choice.count - 1)}">
+                                <select class="form-control" th:field="*{race.abilityBonusChoices}">
+                                    <option value="">NONE</option>
+                                    <option th:each="ability : *{race.abilityNamesSelection}"
+                                            th:value="${ability}"
+                                            th:text="${ability.name}">
+                                    </option>
+                                </select>
+                            </li>
+                        </ul>
                     </div>
-                    <ul th:each="trait : ${selectedRaceTraits}">
+                    <div class="d-inline-flex justify-content-center align-items-center">
+                        <button type="button" data-bs-toggle="collapse" data-bs-target="#race-traits-collapse"
+                                class="btn badge text-bg-success rounded-pill me-1 mb-2 d-inline-flex">
+                            Show race traits
+                        </button>
+                    </div>
+                    <ul class="collapse hide" id="race-traits-collapse" th:each="trait : ${selectedRaceTraits}">
                         <li th:text="${trait.name}" class="border-bottom">trait.name</li>
                         <li th:text="${trait.description}">trait.desc</li>
                     </ul>
@@ -94,7 +112,8 @@
             <div class="row">
                 <div class="col-2 mb-2">
                     <label for="class">Class:</label>
-                    <select id="class" class="form-control" th:field="*{chosenCharacterClassKey}" onchange="this.form.action='/characterAdd?addClass'; this.form.submit();">
+                    <select id="class" class="form-control" th:field="*{chosenCharacterClassKey}"
+                            onchange="this.form.action='/characterAdd?addClass'; this.form.submit();">
                         <option value="" th:text="'Select a class'"></option>
                         <option th:each="cls : ${classes}"
                                 th:value="${cls.srdKey}"
@@ -102,10 +121,15 @@
                     </select>
                 </div>
                 <ul class="col-2 mb-2 mt-4 list-unstyled d-inline-flex">
-                    <li class="d-inline-flex justify-content-center align-items-center" th:each="classEntry: *{classes}">
+                    <li class="d-inline-flex justify-content-center align-items-center"
+                        th:each="classEntry: *{classes}">
                         <div class="badge text-bg-success rounded-pill me-1 d-inline-flex" th:if="${classEntry}">
-                            <div class="d-inline-flex align-items-center" th:text="${classEntry.value.name}">class.name</div>
-                            <button type="submit" class="btn btn-danger badge rounded-pill ms-1" name="classKey" th:formaction="@{/characterAdd?deleteClass}" th:value="${classEntry.key}">X</button>
+                            <div class="d-inline-flex align-items-center" th:text="${classEntry.value.name}">
+                                class.name
+                            </div>
+                            <button type="submit" class="btn btn-danger badge rounded-pill ms-1" name="classKey"
+                                    th:formaction="@{/characterAdd?deleteClass}" th:value="${classEntry.key}">X
+                            </button>
                         </div>
                     </li>
                 </ul>
@@ -114,16 +138,30 @@
         <div class="col-12">
             <div class="row">
                 <div class="col-12" th:each="classEntry: *{classes}">
-                    <div class="badge text-bg-success rounded-pill me-1 d-inline-flex">
-                        <div class="d-inline-flex align-items-center" th:text="${classEntry.value.name}">class.name</div>
-                        <button type="submit" class="btn btn-danger badge rounded-pill ms-1" name="classKey" th:formaction="@{/characterAdd?deleteClass}" th:value="${classEntry.key}">X</button>
+                    <div class="row">
+                    <div class="col-1">
+                        <div class="d-inline-flex">
+                            <div>Select&nbsp;</div><div th:text="${classEntry.value.name}">Class</div><div>&nbsp;level:</div>
+                        </div>
+                        <select id="class-level" class="form-control mb-2" type="text" th:field="*{classes[__${classEntry.key}__].level}">
+                            <option th:each="lvl : ${levels}"
+                                    th:value="${lvl}"
+                                    th:text="${lvl.numericValue}">
+                        </select>
                     </div>
-                    <ul th:each="feature : ${selectedClassesFeatures}">
+                    </div>
+                    <div class="d-inline-flex justify-content-center align-items-center">
+                        <button type="button" data-bs-toggle="collapse" data-bs-target="#class-traits-collapse"
+                                class="btn badge text-bg-success rounded-pill me-1 mb-2 d-inline-flex">
+                            <div>Show&nbsp;</div><div th:text="${classEntry.value.name}">class</div><div>&nbsp;traits</div>
+                        </button>
+                    </div>
+                    <ul class="collapse hide" id="class-traits-collapse" th:each="feature : ${selectedClassesFeatures}">
                         <li class="row border-bottom">
                             <div class="col-6" th:text="${feature.name}">
                                 feature.name
                             </div>
-                            <div class="col-6" th:text="${feature.getGainedAtLevels()}">
+                            <div class="col-6" th:text="${feature.getDisplayGainedAt()}">
                                 feature.gainedAt
                             </div>
                         </li>
