--- a/src/main/resources/templates/characterSheet.html
+++ b/src/main/resources/templates/characterSheet.html
@@ -195,13 +195,13 @@
                             </div>
                             <div class="row border border-2 rounded">
                                 <div class="col-12  collapse show" id="abilities-collapse">
-                                    <div class="row" th:if="${character.abilities}"
+                                    <div class="row" th:unless="${#lists.isEmpty(character.abilities)}"
                                          th:each="abilityName : ${abilityNames}">
                                         <div class="col-6" th:text="${abilityName.getSrdKey()}">name</div>
                                         <div class="col-3"
                                              style="padding-left: 0px !important; padding-right: 0px !important">
                                             <div th:if="${mode == 'view'}"
-                                                 th:text="${character.getAbility(abilityName.getSrdKey()).getValue()}">
+                                                 th:text="${character.getAbility(abilityName.getSrdKey()).getTotalValue()}">
                                                 val
                                             </div>
                                             <input th:if="${mode == 'edit'}"
@@ -228,32 +228,60 @@
                             <div class="row border border-2 rounded text-start">
                                 <div class="col-12 collapse show" id="saving-throws-collapse">
                                     <div class="row" th:each="savingThrow : ${character.savingThrows}">
-                                        <div class="col-8" th:text="${savingThrow.getName()}">name</div>
-                                        <div class="col-1" th:text="${savingThrow.proficiency.getShortName()}">profi
+                                        <div class="col-7" th:text="${savingThrow.getDisplayName()}" style="padding-right: 0px !important">name</div>
+                                        <div class="col-1" th:text="${savingThrow.proficiency.getShortName()}" style="padding-left: 0px !important; padding-right: 0px !important">profi
                                         </div>
-                                        <div class="col-2" th:text="${savingThrow.getValue()}">value</div>
-                                        <div class="col-1" th:text="${savingThrow.advantage.getShortName()}">adv
+                                        <div class="col-2" th:text="${savingThrow.getTotalValue(character.level)}" style="padding-left: 0px !important; padding-right: 0px !important">value</div>
+                                        <div class="col-2"
+                                             th:switch="${savingThrow.getAdvantage()}">
+                                            <span th:case="${T(com.jakuch.PartySheetShow.player.character.model.Advantage).ADVANTAGE}"
+                                                  class="badge rounded-circle text-bg-success p-2">
+                                                <span class="visually-hidden">A</span>
+                                            </span>
+                                            <span th:case="${T(com.jakuch.PartySheetShow.player.character.model.Advantage).DISADVANTAGE}"
+                                                  class="badge rounded-circle text-bg-danger p-2">
+                                                <span class="visually-hidden">D</span>
+                                            </span>
+                                            <span th:case="*"></span>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-12 mt-1 mb-1">
-                                    <div class="text-success border-0">
-                                        Senses
-                                    </div>
+                                    <div class="text-success border-0">Senses</div>
                                 </div>
                             </div>
                             <div class="row border border-2 rounded text-start">
-                                <div class="col-12">
-                                    Passive per
+                                <div class="col-12" th:each="passiveSense: ${character.passiveSenses}">
+                                    <div class="row text-center align-items-center">
+                                        <div class="col-6" th:text="${passiveSense.skillName.getDisplayName()}">passive</div>
+                                        <div class="col-2" th:text="${passiveSense.proficiency.getShortName()}">proficiency</div>
+                                        <div class="col-2" th:text="${passiveSense.getTotalValue(character.level)}">value</div>
+                                        <div class="col-2"
+                                             th:switch="${passiveSense.advantage}">
+                                            <span th:case="${T(com.jakuch.PartySheetShow.player.character.model.Advantage).ADVANTAGE}"
+                                                  class="badge rounded-circle text-bg-success p-2">
+                                                <span class="visually-hidden">A</span>
+                                            </span>
+                                            <span th:case="${T(com.jakuch.PartySheetShow.player.character.model.Advantage).DISADVANTAGE}"
+                                                  class="badge rounded-circle text-bg-danger p-2">
+                                                <span class="visually-hidden">D</span>
+                                            </span>
+                                            <span th:case="*"></span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-12" th:each="trait: ${character.race.traits}" th:if="${trait.key.srdName} == 'Darkvision'">
+                                    <div class="row text-center align-items-center">
+                                        <div class="col-6" th:text="${trait.key.srdName}">darkvision</div>
+                                        <div class="col-6" th:text="${trait.value}">30</div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-12 mt-1 mb-1">
-                                    <div class="text-success border-0">
-                                        Defenses
-                                    </div>
+                                    <div class="text-success border-0">Defenses</div>
                                 </div>
                             </div>
                             <div class="row border border-2 rounded text-start">
@@ -261,9 +289,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-12 mt-1 mb-1">
-                                    <div class="text-success border-0">
-                                        Conditions
-                                    </div>
+                                    <div class="text-success border-0">Conditions</div>
                                 </div>
                             </div>
                             <div class="row border border-2 rounded text-start">
@@ -284,11 +310,11 @@
                             <div class="row border border-2 rounded text-start">
                                 <div class="col-12 collapse show" id="skills-collapse">
                                     <div class="row" th:each="skillName : ${skillNames}">
-                                        <div class="col-7" th:text="${character.getSkill(skillName.srdKey).name}">
+                                        <div class="col-7" th:text="${character.getSkillDisplayName(skillName.srdKey)}">
                                             name
                                         </div>
                                         <div class="col-1"
-                                             th:text="${character.getSkill(skillName.srdKey).proficiency.getShortName()}">
+                                             th:text="${character.getSkillProficiencyShortName(skillName.srdKey)}">
                                             profi
                                         </div>
                                         <div class="col-2" th:text="${character.getSkill(skillName.srdKey).value}">
@@ -323,27 +349,29 @@
                                 <div class="col-12 collapse show" id="proficiencies-collapse"
                                      th:each="charClass : ${character.characterClasses}">
                                     <div class="row">
-                                        <div class="col-12 text-success" th:text="${charClass.name}">
+                                        <div class="col-12 text-success text-center" th:text="${charClass.name}">
                                             class
                                         </div>
                                     </div>
-                                    <div class="row"
-                                         th:unless="${#lists.isEmpty(charClass.classProficiencies.armor)}">
-                                        <div class="col-12" th:text="${charClass.classProficiencies.armor}">
-                                            Armor
-                                        </div>
+                                    <div class="row" th:unless="${#lists.isEmpty(charClass.classProficiencies.armor)}">
+                                        <div class="border-bottom">Armors</div>
+                                        <ul class="col-12 mb-3 list-unstyled">
+                                            <li th:each="armor : ${charClass.classProficiencies.armor}" th:text="${armor}">Armor</li>
+                                        </ul>
                                     </div>
                                     <div class="row"
                                          th:unless="${#lists.isEmpty(charClass.classProficiencies.weapons)}">
-                                        <div class="col-12" th:text="${charClass.classProficiencies.weapons}">
-                                            Weapon
-                                        </div>
+                                        <div class="border-bottom border-top">Weapons</div>
+                                        <ul class="col-12 mb-3 list-unstyled">
+                                            <li th:each="weapon : ${charClass.classProficiencies.weapons}" th:text="${weapon}">Weapon</li>
+                                        </ul>
                                     </div>
                                     <div class="row"
                                          th:unless="${#lists.isEmpty(charClass.classProficiencies.tools)}">
-                                        <div class="col-12" th:text="${charClass.classProficiencies.tools}">
-                                            Tools
-                                        </div>
+                                        <div class="border-bottom">Tools</div>
+                                        <ul class="col-12 mb-3 list-unstyled">
+                                            <li th:each="tool : ${charClass.classProficiencies.tools}" th:text="${tool}">Tools</li>
+                                        </ul>
                                     </div>
                                 </div>
                             </div>
@@ -398,37 +426,45 @@
                     <div class="row border border-2 rounded">
                         <div class="col-12 collapse show" id="basic-stats-collapse">
                             <div class="row">
-                                <div class="col-1">
-                                    <div class="row">
+                                <div class="col-1 border-end">
+                                    <div>
                                         <div class="col-12">AC</div>
                                     </div>
-                                    <div class="row">
+                                    <div>
                                         <div class="col-12" th:text="${character.armorClass}">AC</div>
                                     </div>
                                 </div>
-                                <div class="col-2">
-                                    <div class="row">
+                                <div class="col-2 border-end">
+                                    <div>
                                         <div class="col-12">Speed (ft)</div>
                                     </div>
-                                    <div class="row">
+                                    <div>
                                         <div class="col-12" th:text="${character.walkingSpeed}">speed</div>
                                     </div>
                                 </div>
-                                <div class="col-3">
-                                    <div class="row">
+                                <div class="col-3 border-end">
+                                    <div>
                                         <div class="col-12">Initiative Bonus</div>
                                     </div>
-                                    <div class="row">
-                                        <div class="col-10" th:text="${character.initiativeBonus.getValue()}">
+                                    <div class="d-inline-flex">
+                                        <div class="col-10" th:text="${character.initiative.getTotalValue(character.level)}">
                                             initiative
                                         </div>
                                         <div class="col-2"
-                                             th:text="${character.initiativeBonus.getAdvantage().getShortName()}">
-                                            initiative
+                                             th:switch="${character.initiative.getAdvantage()}">
+                                            <span th:case="${T(com.jakuch.PartySheetShow.player.character.model.Advantage).ADVANTAGE}"
+                                                  class="badge rounded-circle text-bg-success p-2">
+                                                <span class="visually-hidden">A</span>
+                                            </span>
+                                            <span th:case="${T(com.jakuch.PartySheetShow.player.character.model.Advantage).DISADVANTAGE}"
+                                                  class="badge rounded-circle text-bg-danger p-2">
+                                                <span class="visually-hidden">D</span>
+                                            </span>
+                                            <span th:case="*"></span>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-2">
+                                <div class="col-2 border-end">
                                     <div class="row">
                                         <div class="col-12">Current HP</div>
                                     </div>
@@ -439,13 +475,16 @@
                                            class="form-control text-center"
                                            th:field="*{currentHealth}" th:value="*{currentHealth}">
                                 </div>
-                                <div class="col-2">
+                                <div class="col-2 border-end">
                                     <div class="row">
                                         <div class="col-12">Temp HP</div>
                                     </div>
-                                    <div class="row">
+                                    <div class="row" th:if="${mode == 'view'}">
                                         <div class="col-12" th:text="${character.health.temporary}">tempHp</div>
                                     </div>
+                                    <input th:if="${mode == 'edit'}"
+                                           class="form-control text-center"
+                                           th:field="*{temporaryHealth}" th:value="*{temporaryHealth}">
                                 </div>
                                 <div class="col-2">
                                     <div class="row">
@@ -457,8 +496,8 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div>Hit Dices</div>
-                                <div th:each="diceEntry : ${character.health.hitDices.entrySet()}" th:if="${diceEntry.value > 0}">
+                                <div class="border-top">Hit Dices</div>
+                                <div class="d-inline-flex border border-2 rounded" th:each="diceEntry : ${character.health.hitDices.entrySet()}" th:if="${diceEntry.value > 0}">
                                         <div class="col" th:text="${diceEntry.value}"></div>
                                         <div class="col" th:text="${diceEntry.key.name}"></div>
                                 </div>
@@ -638,21 +677,17 @@
                  style="max-width: 23vw" th:id="${'collapse-' + charClass.srdKey}">
                 <div th:text="${charClass.name}" class="text-center text-success">name</div>
                 <ul th:each="feature: ${charClass.getClassLevelFeatures()}" class="list-unstyled mb-2 ms-2">
-                    <li th:text="${feature.name}" class="border-bottom"></li>
-                    <li>
-                        <ul th:each="gAt: ${feature.gainedAt}">
-                            <li th:text="${gAt.getGainedAtLevelDescription()}"></li>
-                        </ul>
-                    </li>
-                    <li th:text="${feature.description}"></li>
+                    <li th:text="${feature.name}" class="border-bottom">feature.name</li>
+                    <li th:text="${feature.getDisplayGainedAt()}">gainedAt</li>
+                    <li th:text="${feature.description}">feature.description</li>
                 </ul>
             </div>
             <div class="bg-dark text-light text-start  mt-2 border border-4 border-dark rounded collapse multi-collapse collapse-horizontal hide float-start overflow-auto"
                  style="max-width: 23vw" id="desc-collapse-race">
                 <div th:text="${character.race.name}" class="text-center text-success">name</div>
-                <ul th:each="trait: ${character.race.raceTraits}" class="list-unstyled mb-2 ms-2">
-                    <li th:text="${trait.name}" class="border-bottom"></li>
-                    <li th:text="${trait.description}"></li>
+                <ul th:each="trait: ${character.race.traits}" class="list-unstyled mb-2 ms-2">
+                    <li th:text="${trait.key}" class="border-bottom"></li>
+                    <li th:text="${trait.value}"></li>
                 </ul>
             </div>
             <div class="row bg-dark text-light text-start text-wrap mt-2 border border-4 border-dark rounded collapse multi-collapse collapse-horizontal hide float-start overflow-auto"
